--- a/src/vs/workbench/contrib/positronNotebook/browser/notebookCells/NotebookCodeCell.css
+++ b/src/vs/workbench/contrib/positronNotebook/browser/notebookCells/NotebookCodeCell.css
@@ -43,6 +43,11 @@
 		padding-inline: 0.5rem;
 		padding-block: 0.5rem;
 
+		&.output-scrolling {
+			max-height: var(--vscode-positronNotebook-output-max-height);
+			overflow-y: auto;
+		}
+
 		/* Avoid overlap with border which is overlaid from another element so
 		the layout doesn't automatically avoid it*/
 		margin-inline: 1px;
